rtest/tests/jsr335/Semantics/OverloadResolution/MethodReference/ShouldCompile/syntax01/Test.java
// .result=COMPILE_PASS

public class Test {
	interface A {
		int m(int a); 
	}
	
	public void method(A a) {
		
	}
	
	public int m(int a) {
		return a;
	}
	
	public void testMethod() {
		// Basic expr method reference in parameter
		method(this::m);
	}
	
}